testdata/baselines/reference/submodule/compiler/contextualTypeOnYield1.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'IterableIterator'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
contextualTypeOnYield1.ts(1,44): error TS2304: Cannot find name 'Generator'.
contextualTypeOnYield1.ts(4,10): error TS7006: Parameter 'num' implicitly has an 'any' type.
contextualTypeOnYield1.ts(4,18): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'IterableIterator'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== contextualTypeOnYield1.ts (3 errors) ====
    type FuncOrGeneratorFunc = () => (number | Generator<(arg: number) => void, any, void>)
                                               ~~~~~~~~~
!!! error TS2304: Cannot find name 'Generator'.
    
    const f: FuncOrGeneratorFunc = function*() {
      yield (num) => console.log(num); // `num` should be inferred to have type `number`.
             ~~~
!!! error TS7006: Parameter 'num' implicitly has an 'any' type.
                     ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
    }